<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="120dp"
        android:src="@mipmap/ic_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearRestaurantCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:showNavigationButtons="false" />

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_back"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="52dp"
                    android:src="@mipmap/ic_heart"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_search"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/priceCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/avgRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/black"
                            android:textSize="30sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/10"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/rateCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/carte_du_restaurant"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/chef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/extrait_de_la_carte"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/priceCardMain1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain2"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/priceCardMain2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain3"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/priceCardMain3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"/>


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/voir_la_carte"
                    android:textAllCaps="true"
                    android:textColor="@color/green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/notes_avis"
                    android:textAllCaps="true"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/avgRate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black"
                        android:textSize="30sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/10"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/voir_tous"
                    android:textAllCaps="true"
                    android:textColor="@color/green"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_line_gray"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/ecrire"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ta_logo"/>

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:src="@mipmap/ta_bubbles_empty"/>

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:src="@mipmap/ta_bubbles_empty"/>

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:src="@mipmap/ta_bubbles_empty"/>

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:src="@mipmap/ta_bubbles_empty"/>

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:src="@mipmap/ta_bubbles_empty"/>

                <TextView
                    android:id="@+id/taReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/voir_tout"
                    android:textAllCaps="true"
                    android:textColor="@color/green"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_green"
                android:gravity="center"
                android:text="@string/reserver"
                android:textAllCaps="true"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>