<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.MainActivity">

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="120dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_loading" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearRestaurantCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:showNavigationButtons="false" />

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_back">
                </ImageView>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:src="@mipmap/ic_heart"
                    android:layout_alignParentRight="true">
                </ImageView>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_search">
                </ImageView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_marginHorizontal="16dp">

                    <TextView
                        android:id="@+id/restaurantName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black">
                    </TextView>

                    <TextView
                        android:id="@+id/priceCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/black">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_marginHorizontal="16dp"
                    android:layout_alignParentRight="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp">

                        <TextView
                            android:id="@+id/avgRate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="30sp">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/10"
                            android:textColor="@color/black">
                        </TextView>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/rateCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_gravity="right"
                        android:textColor="@color/black">
                    </TextView>

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/carte_du_restaurant"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:id="@+id/updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/black"
                    android:visibility="gone">
                </TextView>

                <TextView
                    android:id="@+id/chef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/extrait_de_la_carte"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black">
                </TextView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_light">
                    </TextView>

                    <TextView
                        android:id="@+id/priceCardMain1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black">
                    </TextView>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain2"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black">
                    </TextView>

                    <TextView
                        android:id="@+id/priceCardMain2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/black">
                    </TextView>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/cardMain3"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:textColor="@color/black">
                    </TextView>

                    <TextView
                        android:id="@+id/priceCardMain3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_bold">
                    </TextView>


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/voir_la_carte"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="true"
                    android:textColor="@color/green">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/notes_avis"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="true"
                    android:textColor="@color/black">
                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/avgRate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="30sp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/10"
                        android:textColor="@color/black">
                    </TextView>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/voir_tous"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="true"
                    android:textColor="@color/green">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/ecrire"
                    android:gravity="center"
                    android:background="@drawable/rounded_line_gray"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:background="@color/light_grey"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ta_logo">
                </ImageView>

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="4dp"
                    android:src="@mipmap/ta_bubbles_empty">
                </ImageView>
                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="2dp"
                    android:src="@mipmap/ta_bubbles_empty">
                </ImageView>
                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="2dp"
                    android:src="@mipmap/ta_bubbles_empty">
                </ImageView>
                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="2dp"
                    android:src="@mipmap/ta_bubbles_empty">
                </ImageView>
                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="2dp"
                    android:src="@mipmap/ta_bubbles_empty">
                </ImageView>

                <TextView
                    android:id="@+id/taReviewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_regular">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:text="@string/voir_tout"
                    android:fontFamily="@font/roboto_bold"
                    android:textAllCaps="true"
                    android:textColor="@color/green">
                </TextView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_green"
                android:textColor="@color/white"
                android:text="@string/reserver"
                android:textAllCaps="true"
                android:gravity="center">
            </TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>